Comparing simulated tree with original

--- a/example.config
+++ b/example.config
@@ -10,10 +10,10 @@ output_dir = example_out
 rate_matrix = 1,1,1,1,1,1
 
 #parameters for read simulation
-coverage = 20 #either an integer or a file name of a comma delimited file with tip names and coverage
+coverage = 50 #either an integer or a file name of a comma delimited file with tip names and coverage
 
 #OPTIONAL PARAMETERS
-prefix = sim_ #optional prefix prepended to sequence names, default is using orginal sequence names
+#prefix = sim_ #optional prefix prepended to sequence names, default is using orginal sequence names
 
 #Optional evolutionary model parameters
 gamma_shape = 5 #dafault is no rate variation across sites
@@ -24,9 +24,9 @@ percent_clustered = 0.25 #The percentage of variable sites whose distance to ano
 exponential_mean = 125 #Minimum allowed value = 2
 
 #ART Optional parameters (for more fine grained control ART can be run seperately on the mutated genomes found in outdir/fasta_files)
-error_model1 = example/ErrprofR1.txt  # If you haven't generated have one of your own using ART, you can use one supplied by ART.
-error_model2 = example/ErrprofR2.txt  # Un-comment these lines (delete the first #) to set a non-default error profile
-read_length = 150 #maximum value with example error profile is 150, use a default or generate adifferent error profile for longer reads.
-fragment_size = 380
+#error_model1 = example/ErrprofR1.txt  # If you haven't generated have one of your own using ART, you can use one supplied by ART.
+#error_model2 = example/ErrprofR2.txt  # Un-comment these lines (delete the first #) to set a non-default error profile
+read_length = 250 #maximum value with example error profile is 150, use a default or generate adifferent error profile for longer reads.
+fragment_size = 550
 stdev_frag_size = 120
 
